Fix stock chart to cutoff when data is not available

--- a/app/assets/stylesheets/components/_stock-search-bar.scss
+++ b/app/assets/stylesheets/components/_stock-search-bar.scss
@@ -11,6 +11,7 @@
     background: white;
     z-index: 999;
     font-family: DIN Pro,-apple-system,BlinkMacSystemFont,sans-serif;
+    padding: 1px;
     border-left: 1px solid #eee;
     border-right: 1px solid #eee;
     border-bottom: 1px solid #eee;
