--- a/app/assets/stylesheets/components/_stock-transaction.scss
+++ b/app/assets/stylesheets/components/_stock-transaction.scss
@@ -9,8 +9,12 @@
     font-size: 16px;
     padding: 15px 18px;
     a {
-      margin: 0 5px;
+      padding: 15px 5px;
       cursor: pointer;
+    }
+    .active {
+      color: #21ce99;
+      border-bottom: 2px solid #21ce99;
     }
     a:hover {
       color: #21ce99;
@@ -33,6 +37,8 @@
       text-align: right;
     }
   }
+
+
 
   .transaction-price, .transaction-cost {
     display: flex;
